--- a/ecclesia/musica/solfeo.html
+++ b/ecclesia/musica/solfeo.html
@@ -18,18 +18,22 @@
       <div class="container">
         <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
-        <a href="#alInicio"
-          ><img src="../../media/ESCUDOCARM.png" alt="" class="logoC"
-        /></a>
-        <a href="../../ecclesia/musica/index.html" class="nombre">INICIO </a>
+        <a href="#alInicio"></a>
+          <img src="../../media/ESCUDOCARM.png" alt="" class="logoC" />
+        </a>
+        <a href="../../ecclesia/musica/index.html" class="nombre">INICIO</a>
       </div>
     </header>
-    <br /><br />
+    <br />
+    <br />
     <!-- ****************************************************************** -->
     <h1 class="init">SOLFEO</h1>
     <h3 class="cita">
-      "No aceptes como Verdad lo que no proviene del Amor, <br />
-      ni aceptes como Amor lo que no proviene de la Verdad" <br />EDITH STEIN
+      "No aceptes como Verdad lo que no proviene del Amor,
+      <br />
+      ni aceptes como Amor lo que no proviene de la Verdad"
+      <br />
+      EDITH STEIN
     </h3>
 
     <!-- ****************************************************************** -->
@@ -40,14 +44,16 @@
       <div>
         <ol>
           <li class="li">
-            <a href="#1">Método Rodolphe</a> <br />
+            <a href="#1">Método Rodolphe</a>
+            <br />
             <hr />
             <a
               href="https://www.youtube.com/watch?v=eqkIA9DDWH8&list=PLTv__5l5504S4kH2fiJrtv074gz_Ngq3Q&index=1"
               class="exterior"
               target="_blank"
-              >LINK YouTube 34 temas</a
             >
+              LINK YouTube 34 temas
+            </a>
           </li>
           <li class="li"><a href="#2"></a></li>
           <li class="li"><a href="#3"></a></li>
@@ -69,7 +75,8 @@
             <a
               href="../../media/musica/solfeo/01 SOLFEO - CLASES1-2.pdf"
               target="_blank"
-              >Ejercicios
+            >
+              Ejercicios
             </a>
           </details>
         </li>
@@ -77,18 +84,21 @@
         <li>
           <details class="select">
             <summary>Clase 2-3</summary>
-            <a href="../../media/musica/solfeo/CLASE 3.pdf" target="_blank"
-              >Ejercicios
+            <a href="../../media/musica/solfeo/CLASE 3.pdf" target="_blank">
+              Ejercicios
             </a>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Clase 4-5</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 05.pdf" target="_blank"
-              >Ejercicios
+            <a href="../../media/musica/solfeo/SOLFEO 05.pdf" target="_blank">
+              Ejercicios
             </a>
           </details>
         </li>
@@ -96,20 +106,29 @@
         <li>
           <details class="select">
             <summary>Clase 6-11</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 6-11.pdf" target="_blank"
-              >Ejercicios</a
-            >
-            <p><br /><br /></p>
+            <a href="../../media/musica/solfeo/SOLFEO 6-11.pdf" target="_blank">
+              Ejercicios
+            </a>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Clase 12-15</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 12-15.pdf" target="_blank"
-              >Ejercicio y Teoría</a
+            <a
+              href="../../media/musica/solfeo/SOLFEO 12-15.pdf"
+              target="_blank"
             >
-            <p><br /><br /></p>
+              Ejercicio y Teoría
+            </a>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -117,39 +136,60 @@
         <li>
           <details class="select">
             <summary>Clase 16-20</summary>
-            <a href="../../media/musica/solfeo/SOLFEO 16-20.pdf" target="_blank"
-              >Ejercicios y Teoría
+            <a
+              href="../../media/musica/solfeo/SOLFEO 16-20.pdf"
+              target="_blank"
+            >
+              Ejercicios y Teoría
             </a>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Clase 21-25</summary>
+            <a href="../../media/musica/solfeo/SOLFEO 21-25.pdf">Ejercicios</a>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
-          </details>
-        </li>
-        <!-- ****************************** -->
-        <li>
-          <details class="select">
-            <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Summarium</summary>
-            <a href="../../media/musica/solfeo/SOLFEO.pdf">Summarium </a>
-            <p><br /><br /></p>
+            <a href="../../media/musica/solfeo/SOLFEO Summarium.pdf">
+              Summarium
+            </a>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -164,42 +204,60 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -214,49 +272,70 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -271,42 +350,60 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -321,42 +418,60 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -371,42 +486,60 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -421,42 +554,60 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p><br /><br /></p>
+            <p>
+              <br />
+              <br />
+            </p>
           </details>
         </li>
         <!-- ****************************** -->
