--- a/ecclesia/lectio/mateo/mateo4.html
+++ b/ecclesia/lectio/mateo/mateo4.html
@@ -384,6 +384,47 @@
         <li>
           <details class="select">
             <summary>Metanoia</summary>
+            <h4>La Tentación</h4>
+            <ol>
+              <li>Inceptum Divinum</li>
+              <p>Toda tentación es acompañada de la Gracia para vencerla</p>
+              <li>Scientia Domini</li>
+              <p>
+                Orígenes "El que no se alimenta de la Palabra de Dios no
+                resistirá a la tentación."
+                <br />
+                <br />
+                San Agustín "La tentación es parte de la condición humana, pero
+                en Cristo vemos cómo vencerla."
+              </p>
+              <li>Discernimentum</li>
+              <p>Dios permite la Tentación para nuestro bien</p>
+              <ol>
+                <li>Revela la inclinación de mi corazón</li>
+                <li>
+                  Vemos lo que queremos ver, unos el mal y otros el bien posible
+                </li>
+                <li>La medida de unión con el Señor me ayuda a discernir</li>
+                <li>Siempre es ocasión de conversión más profunda</li>
+                <li>
+                  En Cristo siempre es medio de perfeccionamiento cristiano
+                </li>
+                <li>
+                  Es el momento de elegir al Señor, siempre es tentación
+                  cualquier cosa donde no lo elijo
+                </li>
+                <li>
+                  Siempre empiezan por ser muy pequeñas, casi imperceptibles
+                </li>
+              </ol>
+              <li>Oratio</li>
+              <p>
+                Lo fundamental es tener siempre presente al Señor como la
+                elección única, aprender de la experiencia, y si me siento
+                tentado, trabajar en mi conversión. Esto con Oración, LECTIO y
+                perseverancia.
+              </p>
+            </ol>
             <p>
               <br />
               <br />
@@ -583,14 +624,16 @@
             <summary>Paralelos</summary>
             <p>
               La perícopa de Mateo 4,12-17 contiene dos elementos principales:
+              <br />
               1. El traslado de Jesús a Galilea tras la prisión de Juan (vv.
-              12-13) 2. El inicio de la predicación de Jesús (vv. 14-17), con la
-              cita de Isaías. Ahora veamos textos paralelos en los otros
-              evangelios y en el AT:
+              12-13)
+              <br />
+              2. El inicio de la predicación de Jesús (vv. 14-17), con la cita
+              de Isaías. Ahora veamos textos paralelos en los otros evangelios y
+              en el AT:
               <br />
               <br />
-              <br />
-              <br />
+
               1️⃣ Paralelos en los Evangelios ➤ a) Traslado de Jesús a Galilea e
               inicio de su predicación Marcos 1,14-15 → paralelo casi directo 14
               Después que Juan fue arrestado, Jesús se fue a Galilea a proclamar
@@ -604,8 +647,7 @@
               bautizando más discípulos que Juan.
               <br />
               <br />
-              <br />
-              <br />
+
               2️⃣ Cita de Isaías El texto de Mateo 4,15-16 es una cita de: Isaías
               8,23–9,1 (en numeración hebrea es Isaías 9,1-2): El pueblo que
               andaba en tinieblas vio una gran luz; sobre los que habitaban en
@@ -616,8 +658,7 @@
               precisamente allí.
               <br />
               <br />
-              <br />
-              <br />
+
               3️⃣ Tema paralelo: inicio del ministerio público de Jesús Este tema
               lo desarrollan todos los evangelios sinópticos como inicio formal
               del ministerio tras el retiro o arresto de Juan: • Marcos 1,14-15
@@ -626,8 +667,7 @@
               ministerio propio de Jesús
               <br />
               <br />
-              <br />
-              <br />
+
               4️⃣ Tema teológico paralelo: Reino de Dios / Reino de los cielos La
               fórmula:
               <br />
@@ -641,8 +681,7 @@
               • Lucas 9,2 • Hechos 1,3
               <br />
               <br />
-              <br />
-              <br />
+
               Resumen de los paralelos Elemento Paralelo en otros evangelios
               Fuente AT Retiro a Galilea tras arresto de Juan Marcos 1,14-15 /
               Lucas 4,14-15 / Juan 4,1-3 — Cita de Isaías sobre la luz en
@@ -653,10 +692,14 @@
               <br />
               Conclusión
               <br />
-              Esta perícopa sí tiene textos y temas paralelos: • En Marcos y
-              Lucas sobre el inicio del ministerio. • En Isaías como profecía
-              cumplida. • Tema recurrente en todos los sinópticos: el anuncio
-              del Reino y el llamado a la conversión.
+              Esta perícopa sí tiene textos y temas paralelos:
+              <br />
+              • En Marcos y Lucas sobre el inicio del ministerio.
+              <br />
+              • En Isaías como profecía cumplida.
+              <br />
+              • Tema recurrente en todos los sinópticos: el anuncio del Reino y
+              el llamado a la conversión.
 
               <br />
               <br />
@@ -672,8 +715,7 @@
               densa. Te señalo los temas teológicos más relevantes que
               encontramos en ella:
               <br />
-              <br />
-              <br />
+
               1️⃣ Cumplimiento de las profecías (Cristología mesiánica)
               <br />
               <br />
@@ -692,7 +734,7 @@
               promesas.
               <br />
               <br />
-              <br />
+
               2️⃣ La luz que vence las tinieblas
               <br />
               <br />
@@ -763,17 +805,6 @@
               + La conversión es un camino permanente.
               <br />
               <br />
-              <br />
-              <br />
-              Resumen Tema teológico Significado Cumplimiento de las profecías
-              Jesús es el Mesías esperado La luz en las tinieblas Jesús trae
-              revelación y salvación Universalidad de la salvación El Reino es
-              para todos los pueblos Inicio del Reino de los cielos La soberanía
-              de Dios se hace presente en Jesús Llamado a la conversión La
-              entrada en el Reino exige cambio radical de vida
-              <br />
-              <br />
-              <br />
               Conclusión Esta perícopa es programática en Mateo:
               <br />
               <br />
@@ -799,12 +830,10 @@
             <p>
               <br />
               <br />
-              Sí, los Padres de la Iglesia sí comentaron esta perícopa, aunque
-              no siempre como un tratado aislado, sino en sus comentarios al
+              Los Padres de la Iglesia sí comentaron esta perícopa, aunque no
+              siempre como un tratado aislado, sino en sus comentarios al
               Evangelio de Mateo o en homilías sobre el ministerio de Jesús. Te
               resumo algunos puntos interesantes de su tratamiento:
-              <br />
-              <br />
               <br />
               <br />
               1️⃣ Cumplimiento de la profecía (Cristología mesiánica) Muchos
@@ -824,8 +853,7 @@
               ilumina a aquellos que estaban en la ignorancia y el error pagano.
               <br />
               <br />
-              <br />
-              <br />
+
               2️⃣ Luz que vence las tinieblas Este tema era muy apreciado por los
               Padres, que amaban el simbolismo de la luz.
               <br />
@@ -861,8 +889,7 @@
               misión universal de la Iglesia.
               <br />
               <br />
-              <br />
-              <br />
+
               4️⃣ Llamado a la conversión Los Padres interpretaron el llamado de
               Jesús “Convertíos” como: • Un llamado urgente a cambiar de vida. •
               Una gracia que precede al esfuerzo humano.
@@ -876,41 +903,26 @@
               exterior.
               <br />
               <br />
-              <br />
-              <br />
-              Resumen Tema Padres que lo comentan Idea central Cumplimiento de
-              profecías Jerónimo, Hilario Jesús actúa según el plan de Dios Luz
-              en las tinieblas Orígenes, Crisóstomo Cristo ilumina la ignorancia
-              y el pecado Universalidad de la salvación Agustín La salvación se
-              abre a los paganos Llamado a la conversión Crisóstomo, Agustín
-              Conversión interior y gracia previa
-              <br />
-              <br />
+              + San Agustín dice en su Sermón 2 sobre el Salmo 63: «La
+              conversión es un don de Dios, que nos llama a volvernos a Él con
+              todo el corazón.»
               <br />
               Conclusión
               <br />
-              <br />
               La perícopa de Mateo 4,12-17 fue muy valorada por los Padres
-              porque ofrece un resumen del programa del Evangelio: •
-              cumplimiento de la profecía, • anuncio de la salvación universal,
-              • luz de Cristo que vence las tinieblas, • llamada urgente a la
-              conversión.
+              porque ofrece un resumen del programa del Evangelio:
+              <br />
+              •cumplimiento de la profecía,
+              <br />
+              • anuncio de la salvación universal,
+              <br />
+              • luz de Cristo que vence las tinieblas,
+              <br />
+              • llamada urgente a la conversión.
               <br />
               <br />
               Los Padres la usaron en sus homilías catequéticas, especialmente
               en tiempos de Cuaresma o de misión.
-              <br />
-              <br />
-              Si quieres, también puedo darte textos concretos de los Padres
-              (con cita de la obra y párrafo) para que los puedas usar si estás
-              preparando algún material (clase, predicación, estudio). ¿Te
-              gustaría?
-              <br />
-              <br />
-              ✨
-
-              <br />
-              <br />
             </p>
           </details>
         </li>
@@ -919,18 +931,9 @@
           <details class="select">
             <summary>Magisterio</summary>
             <p>
-              Vamos a ver: el Magisterio de la Iglesia (Concilios, Papas,
-              Catecismo, documentos oficiales) no suele comentar directamente
-              perícopas concretas como Mateo 4,12-17 versículo por versículo,
-              pero sí enseña doctrina sobre los temas teológicos que aquí
-              aparecen. Te los resumo uno por uno:
-              <br />
-              <br />
-              <br />
-              <br />
               1️⃣ Cumplimiento de las profecías / Jesús Mesías
               <br />
-              <br />
+
               El Magisterio enseña claramente que Jesús es el cumplimiento de
               las promesas del AT: Catecismo de la Iglesia Católica (CIC):
               «Jesús realiza la esperanza mesiánica de Israel en su triple
@@ -941,8 +944,6 @@
               <br />
               En Mateo 4,12-17, el cumplimiento de Isaías es un ejemplo claro de
               esta doctrina.
-              <br />
-              <br />
               <br />
               <br />
               2️⃣ Jesús, luz que vence las tinieblas
@@ -965,8 +966,7 @@
               Relación explícita con la cita de Isaías que Mateo usa.
               <br />
               <br />
-              <br />
-              <br />
+
               3️⃣ Universalidad de la salvación
               <br />
               <br />
@@ -983,8 +983,7 @@
               10,5-7), pero después a todas las naciones.»
               <br />
               <br />
-              <br />
-              <br />
+
               4️⃣ Reino de los cielos
               <br />
               <br />
@@ -1003,8 +1002,7 @@
               esto.
               <br />
               <br />
-              <br />
-              <br />
+
               5️⃣ Llamado a la conversión
               <br />
               <br />
@@ -1030,8 +1028,7 @@
               Dios CIC 541, 544 Llamado a la conversión CIC 1427-1428
               <br />
               <br />
-              <br />
-              <br />
+
               Conclusión El Magisterio de la Iglesia retoma y desarrolla
               plenamente los grandes temas de esta perícopa de Mateo:
               <br />
@@ -1045,18 +1042,9 @@
               conversión.
               <br />
               <br />
-              <br />
-              <br />
+
               Mateo 4,12-17 es un texto programático que está en perfecta
               sintonía con la enseñanza oficial de la Iglesia.
-              <br />
-              <br />
-              Si quieres, también te puedo dar ejemplos de cómo la liturgia
-              actual (por ejemplo en el tiempo ordinario o en Epifanía) utiliza
-              esta perícopa y la conecta con el Magisterio. ¿Te gustaría?
-
-              <br />
-              <br />
             </p>
           </details>
         </li>
@@ -1064,6 +1052,17 @@
         <li>
           <details class="select">
             <summary>Metanoia</summary>
+            <h4>La Conversión</h4>
+            <ol>
+              <li>Inceptum Divinum</li>
+              <p>La conversion es Gracia y respuesta</p>
+              <li>Scientia Domini</li>
+              <p>La conversión es el Primer paso de la vida en Cristo</p>
+              <li>Discernimentum</li>
+              <p>Conciencia de Bien y mal y la necesidad de la Conversión</p>
+              <li>Oratio</li>
+              <p>Reconocer mis intenciones, como camino de conversión</p>
+            </ol>
             <p>
               <br />
               <br />
