--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -226,7 +226,7 @@
           <summary>Gratia sustentans</summary>
                  <ol>
       <li>La Perseverancia, es la Gracia y el habitus que me lleva a la siguiente morada y me debe acompañar a lo largo de toda mi vida</li>
-      <li>Perseverancia en la Oración, el bien y la caridad</li>
+      <li>Perseverancia en la Oración, el Bien y la Caridad</li>
             
         </details></li>
         <!-- ****************************** -->
